# Autonomous-Security-Robot

security_bot/: CMakeLists.txt  package.xml
security_bot/arduino/left_motor/: left_motor.ino
security_bot/arduino/right_motor/: right_motor.ino
security_bot/configuration/: control.yaml  costmap_common.yaml  costmap_global.yaml  joints.yaml  map_configuration.rviz  oldplan.yaml  plan.yaml
security_bot/include/security_bot/: hardware_robot.h
security_bot/launch/: base.launch  control.launch  localization.launch  map.launch  model.launch  navigation.launch
security_bot/model/: security_bot.urdf.xacro
security_bot/src/: hardware_node.cpp  ros_i2c.cpp
